# videoraptor

./: .gitignore  CMakeLists.txt  README.md  fullpath.py  test.cpp  test.py  tutorial01.c  videoRaptorBatch.cpp  videoRaptorBatch.hpp  videoRaptorOnce.cpp  videoraptor.cpp
alignment/: alignment.cpp  alignment.hpp
core/: AppError.hpp  ErrorReader.hpp  FileHandle.hpp  HWDevices.hpp  Output.hpp  Stream.hpp  StringEncoder.hpp  ThumbnailContext.hpp  Video.hpp  VideoDetails.hpp  VideoInfo.hpp  VideoLog.hpp  VideoRaptorInfo.hpp  VideoReport.hpp  VideoThumbnail.hpp  common.cpp  common.hpp  compatWindows.hpp  core.cpp  errorCodes.hpp  initVideoRaptor.hpp  unicode.hpp  utils.hpp  videoRaptorInit.hpp
videoRaptor/: videoRaptor.cpp
videoRaptorBatch/: videoRaptorBatch.cpp  videoRaptorBatch.hpp
videoRaptorOnce/: videoRaptorOnce.cpp  videoRaptorOnce.hpp
